:sparkles: All the ToDoList Components and Context
All the components necessary for the application to work have been added. But the styles, restructuring and refactoring of the code are still needed

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="icon" href="./favicon.ico" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>ToDo List</title>
 </head>
 <body>
-	<h1>Esto se pilló de ./public</h1>
-
 	<div id="root"></div>
+	<div id="modal"></div>
 </body>
 </html>
